druhy push nova-vetev

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod ex nobis qui officiis veritatis deserunt pariatur eos, ratione explicabo ducimus id cum, tenetur ut, dolores odit tempora laudantium nulla perferendis.
     
     </p>
+    <p>nova větev</p>
     
 </body>
 </html>
