--- a/index.html
+++ b/index.html
@@ -4,12 +4,79 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WEB</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style.css" />
+    <title>Psychoterapeutická praxe Adéla Rudá</title>
 </head>
 <body>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod ex nobis qui officiis veritatis deserunt pariatur eos, ratione explicabo ducimus id cum, tenetur ut, dolores odit tempora laudantium nulla perferendis.
+    <nav class="nav">
+        <a class="nav__item" href="">Psychoterapie</a>
+        <a class="nav__item" href="">O mě</a>
+        <a class="nav__item" href="">Kontakt</a>
+    </nav>
+
+    <header class="intro">
+        <div class="intro__content">
+            <p class="intro__content--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <p class="intro__content--autor">Konfucius</p>
+        </div>
+    </header>
     
-    </p>
+    <div class="work">
+        <h1 class="work-heading">Psychoterapie</h1>
+        <div class="gestalt-therapy">
+            <h2 class="gestalt-therapy__heading">Gestalt terapie</h2>
+            <div class="gestalt-therapy__content--herenow">Princip "tady a teď"</div>
+            <!--<div class="gestalt-therapy__content--herenow">Minulost i budoucnost prožíváme v přítomném okamžiku. Na to, co bylo nebo bude, se díváme z pozice aktuální situace, prožívání, zkušeností.</div> -->
+            <div class="gestalt-therapy__content--dialog">Dialog</div>
+            <!-- <div class="gestalt-therapy__content--dialog">Navazuji s klientem autentický kontakt, kladu důraz na vzájemný dialog.</div> -->
+            <div class="gestalt-therapy__content--fenomenology">Prožitek</div>
+            <!-- <div class="gestalt-therapy__content--fenomenology">Uznávám jedinečné, subjektivní prožívání klienta, mým úkolem je poskytnout zpětnou vazbu nikoliv interpretaci.</div> -->
+        </div>
+        <div class="therapy-indication">
+            <h2 class="therapy-indication__heading">S čím Vám mohu pomoci?</h2>
+            <p class="therapy-indication__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+        <div class="therapy-conditions">
+            <h2 class="therapy-conditions__heading">Podmínky spolupráce</h2>
+            <p class="gestalt-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+    </div>
+
+    <div class="about">
+        <h1 class="about__heading">O mě</h1>
+        <img class="about_photo" src="" alt="Profilová fotka">
+        <div class="about__general">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </div>
+        <div class="about__experience">
+            <p>Pracovní zukšenosti:</p>
+            <ul class="about__experience-list">
+                <li class="about__experience-list--first">práce a praxe</li>
+                <li class="about__experience-list--second">práce a praxe</li>
+                <li class="about__experience-list--third">práce a praxe</li>
+            </ul>
+        </div>
+        <div class="about__education">
+            <p>Vzdělání:</p>
+            <ul class="about__education-list">
+                <li class="about__education-list--first">škola</li>
+                <li class="about__education-list--second">škola</li>
+                <li class="about__education-list--third">škola</li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="contact">
+        <h1 class="contact__heading">Kontakt</h1>
+        <span class="contact__address">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+        <span class="contact__language">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
+        <span class="contact__info">name</br>tel</br>email</br>IČO</span>
+    </div>
+
+    <footer class="foot">
+        <p class="foot__copy">Vytvořila Adéla &copy;2021</p>
+    </footer>
     
 </body>
 </html>
