řešení druhého úkolu: grid

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <nav class="nav">
         <a class="nav__item" href="">Psychoterapie</a>
+        <a class="nav__item" href="">koučink</a>
+        <a class="nav__item" href="">Workshopy</a>
         <a class="nav__item" href="">O mě</a>
         <a class="nav__item" href="">Kontakt</a>
     </nav>
@@ -24,8 +26,8 @@
         </div>
     </header>
     
-    <div class="work">
-        <h1 class="work-heading">Psychoterapie</h1>
+    <div class="psychotherapy">
+        <h1 class="psychotherapy-heading">Psychoterapie</h1>
         <div class="gestalt-therapy">
             <h2 class="gestalt-therapy__heading">Gestalt terapie</h2>
             <div class="gestalt-therapy__content--herenow">Princip "tady a teď"</div>
@@ -44,6 +46,39 @@
             <p class="gestalt-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
         </div>
     </div>
+
+    <div class="coaching">
+        <h1 class="coaching__heading">Koučink</h1>
+        <div class="coaching__content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut corporis recusandae perspiciatis placeat molestias dignissimos est id maxime quod consectetur, libero, veritatis nisi dicta tempora odio sapiente sed adipisci beatae?</p>
+        </div>
+        <div class="coaching-indication">
+            <h2 class="coaching-indication__heading">Co můžete získat?</h2>
+            <p class="coaching-indication__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+        <div class="coaching-conditions">
+            <h2 class="coaching-conditions__heading">Podmínky spolupráce</h2>
+            <p class="coaching-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+    </div>
+
+    <div class="workshops">
+        <h1 class="workshops__heading">Workshopy</h1>
+        <div class="workshops__first">
+            <h2 class="workshops__heading">První workshop</h2>
+            <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+        <div class="workshops__second">
+            <h2 class="workshops__heading">Druhý workshop</h2>
+            <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+        <div class="workshops__third">
+            <h2 class="workshops__heading">Třetí workshop</h2>
+            <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+        </div>
+
+    </div>
+
 
     <div class="about">
         <h1 class="about__heading">O mě</h1>
