--- a/index.html
+++ b/index.html
@@ -25,89 +25,94 @@
             <p class="intro__content--autor">Konfucius</p>
         </div>
     </header>
+
+
+        <section class="psychotherapy">
+            <h1 class="psychotherapy-heading">Psychoterapie</h1>
+            <div class="gestalt-therapy">
+                <h2 class="gestalt-therapy__heading">Gestalt terapie</h2>
+                <div class="gestalt-therapy__content--herenow">Princip "tady a teď"</div>
+                <!--<div class="gestalt-therapy__content--herenow">Minulost i budoucnost prožíváme v přítomném okamžiku. Na to, co bylo nebo bude, se díváme z pozice aktuální situace, prožívání, zkušeností.</div> -->
+                <div class="gestalt-therapy__content--dialog">Dialog</div>
+                <!-- <div class="gestalt-therapy__content--dialog">Navazuji s klientem autentický kontakt, kladu důraz na vzájemný dialog.</div> -->
+                <div class="gestalt-therapy__content--fenomenology">Prožitek</div>
+                <!-- <div class="gestalt-therapy__content--fenomenology">Uznávám jedinečné, subjektivní prožívání klienta, mým úkolem je poskytnout zpětnou vazbu nikoliv interpretaci.</div> -->
+            </div>
+            <div class="therapy-indication">
+                <h2 class="therapy-indication__heading">S čím Vám mohu pomoci?</h2>
+                <p class="therapy-indication__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+            <div class="therapy-conditions">
+                <h2 class="therapy-conditions__heading">Podmínky spolupráce</h2>
+                <p class="gestalt-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+        </section>
+
+        <section class="coaching">
+            <h1 class="coaching__heading">Koučink</h1>
+            <div class="coaching__content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut corporis recusandae perspiciatis placeat molestias dignissimos est id maxime quod consectetur, libero, veritatis nisi dicta tempora odio sapiente sed adipisci beatae?</p>
+            </div>
+            <div class="coaching-indication">
+                <h2 class="coaching-indication__heading">Co můžete získat?</h2>
+                <p class="coaching-indication__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+            <div class="coaching-conditions">
+                <h2 class="coaching-conditions__heading">Podmínky spolupráce</h2>
+                <p class="coaching-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+        </section>
+
+        <section class="workshops">
+            <h1 class="workshops__heading">Workshopy</h1>
+            <div class="workshops__first">
+                <h2 class="workshops__heading">První workshop</h2>
+                <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+            <div class="workshops__second">
+                <h2 class="workshops__heading">Druhý workshop</h2>
+                <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+            <div class="workshops__third">
+                <h2 class="workshops__heading">Třetí workshop</h2>
+                <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
+            </div>
+        </section>
+
+
+        <section class="about">
+            <h1 class="about__heading">O mě</h1>
+            <div class="about-wrap">
+                <div class="about__photo">
+                    <img src="" alt="profilová fotka">
+                </div>
+                <div class="about__general">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </div>
+                <div class="about__experience">
+                    <p>Praxe</p>
+                    <ul class="about__experience-list">
+                        <li class="about__experience-list--first">Psycholožka v bezpečnostních sborech (Policie ČR a Celní správa ČR)</li>
+                        <li class="about__experience-list--second">Psycholožka v klinické praxi (probíhající předatestační příprava)</li>
+                        <li class="about__experience-list--third">Soukromá psychoterapeutická a koučovací praxe</li>
+                    </ul>
+                </div>
+                <div class="about__education">
+                    <p>Vzdělání</p>
+                    <ul class="about__education-list">
+                        <li class="about__education-list--first">Psychologie, Filozofická fakulta Univerzity Karlovy v Praze – titul Mgr.</li>
+                        <li class="about__education-list--second">Akreditovaný výcvik v koučování Gestalt přístupem, Gestalt Essence</li>
+                        <li class="about__education-list--third">Systematický psychoterapeutický výcvik v Gestalt terapii, IVGT Praha (5.ročník)</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="contact">
+            <h1 class="contact__heading">Kontakt</h1>
+            <p class="contact__address">Sezení probíhají <span class="bold-text">osobně</span> v kanceláři nebo formou procházky v okolí Dobřichovic/Berounky, možné je taky pracovat <span class="bold-text">online</span>. </br></br><span class="underlined-text">Potkat se můžeme na adrese:</span></br>Ke Koulce 7</br>Praha-Smíchov</p>
+            <p class="contact__language">Pracuji v češtině a angličtině.</p>
+            <p class="contact__info">email: adela.ruda@seznam.cz </br>tel: 730 688 951 </br>IČO: 07045638</p>
+        </section>
     
-    <div class="psychotherapy">
-        <h1 class="psychotherapy-heading">Psychoterapie</h1>
-        <div class="gestalt-therapy">
-            <h2 class="gestalt-therapy__heading">Gestalt terapie</h2>
-            <div class="gestalt-therapy__content--herenow">Princip "tady a teď"</div>
-            <!--<div class="gestalt-therapy__content--herenow">Minulost i budoucnost prožíváme v přítomném okamžiku. Na to, co bylo nebo bude, se díváme z pozice aktuální situace, prožívání, zkušeností.</div> -->
-            <div class="gestalt-therapy__content--dialog">Dialog</div>
-            <!-- <div class="gestalt-therapy__content--dialog">Navazuji s klientem autentický kontakt, kladu důraz na vzájemný dialog.</div> -->
-            <div class="gestalt-therapy__content--fenomenology">Prožitek</div>
-            <!-- <div class="gestalt-therapy__content--fenomenology">Uznávám jedinečné, subjektivní prožívání klienta, mým úkolem je poskytnout zpětnou vazbu nikoliv interpretaci.</div> -->
-        </div>
-        <div class="therapy-indication">
-            <h2 class="therapy-indication__heading">S čím Vám mohu pomoci?</h2>
-            <p class="therapy-indication__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-        <div class="therapy-conditions">
-            <h2 class="therapy-conditions__heading">Podmínky spolupráce</h2>
-            <p class="gestalt-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-    </div>
-
-    <div class="coaching">
-        <h1 class="coaching__heading">Koučink</h1>
-        <div class="coaching__content">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut corporis recusandae perspiciatis placeat molestias dignissimos est id maxime quod consectetur, libero, veritatis nisi dicta tempora odio sapiente sed adipisci beatae?</p>
-        </div>
-        <div class="coaching-indication">
-            <h2 class="coaching-indication__heading">Co můžete získat?</h2>
-            <p class="coaching-indication__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-        <div class="coaching-conditions">
-            <h2 class="coaching-conditions__heading">Podmínky spolupráce</h2>
-            <p class="coaching-conditions__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-    </div>
-
-    <div class="workshops">
-        <h1 class="workshops__heading">Workshopy</h1>
-        <div class="workshops__first">
-            <h2 class="workshops__heading">První workshop</h2>
-            <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-        <div class="workshops__second">
-            <h2 class="workshops__heading">Druhý workshop</h2>
-            <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-        <div class="workshops__third">
-            <h2 class="workshops__heading">Třetí workshop</h2>
-            <p class="workshops__content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In tempora molestiae animi esse, modi maiores quod suscipit quae minus id culpa saepe quis rem aliquam fugiat eius, amet quas labore.</p>
-        </div>
-
-    </div>
-
-
-    <div class="about">
-        <h1 class="about__heading">O mě</h1>
-        <img class="about_photo" src="" alt="Profilová fotka">
-        <div class="about__general">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </div>
-        <div class="about__experience">
-            <p>Pracovní zukšenosti:</p>
-            <ul class="about__experience-list">
-                <li class="about__experience-list--first">práce a praxe</li>
-                <li class="about__experience-list--second">práce a praxe</li>
-                <li class="about__experience-list--third">práce a praxe</li>
-            </ul>
-        </div>
-        <div class="about__education">
-            <p>Vzdělání:</p>
-            <ul class="about__education-list">
-                <li class="about__education-list--first">škola</li>
-                <li class="about__education-list--second">škola</li>
-                <li class="about__education-list--third">škola</li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="contact">
-        <h1 class="contact__heading">Kontakt</h1>
-        <span class="contact__address">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
-        <span class="contact__language">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</span>
-        <span class="contact__info">name</br>tel</br>email</br>IČO</span>
-    </div>
 
     <footer class="foot">
         <p class="foot__copy">Vytvořila Adéla &copy;2021</p>
